@@ -1,3 +1,11 @@
+2008-04-20  David Wetzel <dave@turbocat.de>
+        GSWeb.framework/GSWApplication.m
+        GSWeb.framework/GSWComponentRequestHandler.m
+        GSWeb.framework/GSWServerSessionStore.m
+        GSWeb.framework/GSWSessionStore.m
+        * fixed session (re)creation bug
+        * code cleanups
+
 2008-05-25  Sebastian Reitenbach  <sebastia@l00-bugdead-prods.de>
 
 	* GSWeb.framework/stacktrace.m (PLATFORM_UNIX): Define
